[package]
name = "random-video"
version = "0.1.0"
authors = ["Kyle Pfromer <kpfromer2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.4.1"
rand = "0.8.3"
structopt = "0.3.13"
anyhow = "1.0"
walkdir = "2"
nix = "0.20.0"